✨Feature: 대시보드 인지 저하도 컴포넌트 추가